# gpu-particles-test

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  Main.cpp
src/borealis/: Task.cpp  Task.hpp
src/borealis/gfx/: Camera.cpp  Camera.hpp  Canvas.cpp  Canvas.hpp  Gfx.cpp  Gfx.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Particle.cpp  Particle.hpp  Shader.cpp  Shader.hpp
src/borealis/gfx/impl/: RenderData.hpp  State.hpp  Uniforms.hpp
src/borealis/util/: File.cpp  File.hpp  Math.hpp  Time.cpp  Time.hpp  Trace.cpp  Trace.hpp
src_art/shaders/: particle.compute  particle.frag  particle.vert  test.frag  test.vert
